# dronesim

./: CMakeLists.txt  Makefile
betaflightBridge/: santerinsimulaattori.hpp
src/: main.cpp
src/drone/: controller.cpp  controller.hpp  controllerDevice.cpp  controllerDevice.hpp  hardDrone.cpp  hardDrone.hpp
src/raylibGraphics/: raylibGraphics.cpp  raylibGraphics.hpp
src/simulation/: sim.cpp  sim.hpp  simThread.hpp
